@@ -53,9 +53,13 @@ In addition to these, the environment MAY include the following properties:
 
   - session           An object containing session data. Available to all
                       applications downstream from a strata.sessionCookie
+                      middleware
   - route             An object containing information about the route that was
                       triggered. Available to all applications downstream from a
-                      strata.Router
+                      strata.Router application
+  - remoteUser        A string containing the name of the authorized user when
+                      using HTTP basic auth. Available to all applications
+                      downstream from a strata.authBasic middleware
 
 When combined with scriptName and pathInfo, the serverName and serverPort
 variables may be used to reconstruct the original request URL. Note, however,
