@@ -1,5 +1,26 @@
-var strata = require("./../index");
+var strata = require("./../index"),
+    utils = require("./../utils");
 
+/**
+ * A middleware that performs basic auth on the incoming request before passing
+ * it downstream. The `validate` argument must be a function that accepts three
+ * arguments: the username and password used in the request, and a callback to
+ * to call when auth is complete. This callback should be called with two
+ * arguments: any error that occured and a string that contains the name of the
+ * authorized user, if any.
+ *
+ *     strata.authBasic(app, function (user, pass, callback) {
+ *         if (user == "admin" && pass == "secret") {
+ *             callback(null, user);
+ *         } else {
+ *             callback(null, false);
+ *         }
+ *     });
+ *
+ * When authorization fails, the client will automatically receive a 401
+ * Unauthorized response with the appropriate challenge in the WWW-Authenticate
+ * header.
+ */
 module.exports = function (app, validate, realm) {
     if (typeof validate != "function") {
         throw new strata.Error("Missing validation function for basic auth");
@@ -14,7 +35,7 @@ module.exports = function (app, validate, realm) {
         var authorization = env.httpAuthorization;
 
         if (!authorization) {
-            unauthorized(callback, realm);
+            utils.unauthorized(env, callback, realm);
             return;
         }
 
@@ -22,7 +43,7 @@ module.exports = function (app, validate, realm) {
             scheme = parts[0];
 
         if (scheme.toLowerCase() != "basic") {
-            badRequest(callback);
+            utils.badRequest(env, callback);
             return;
         }
 
@@ -37,29 +58,8 @@ module.exports = function (app, validate, realm) {
                 env.remoteUser = user;
                 app(env, callback);
             } else {
-                unauthorized(callback, realm);
+                utils.unauthorized(env, callback, realm);
             }
         });
     }
-}
-
-function unauthorized(callback, realm) {
-    realm = realm || "Authorization Required";
-
-    var content = "Unauthorized";
-
-    callback(401, {
-        "Content-Type": "text/plain",
-        "Content-Length": Buffer.byteLength(content).toString(),
-        "WWW-Authenticate": 'Basic realm="' + realm + '"'
-    }, content);
-}
-
-function badRequest(callback) {
-    var content = "Bad Request";
-
-    callback(400, {
-        "Content-Type": "text/plain",
-        "Content-Length": Buffer.byteLength(content).toString()
-    }, content);
 }
