@@ -14,6 +14,8 @@ exports.isRe = isRe;
 exports.isEmptyObject = isEmptyObject;
 exports.compareLength = compareLength;
 exports.sortByLength = sortByLength;
+exports.badRequest = badRequest;
+exports.unauthorized = unauthorized;
 exports.notFound = notFound;
 exports.empty = empty;
 
@@ -268,7 +270,34 @@ function sortByLength(array) {
 }
 
 /**
- * A helper app for returning a 404 response.
+ * A helper for returning a 400 Bad Request response.
+ */
+function badRequest(callback) {
+    var content = "Bad Request";
+
+    callback(400, {
+        "Content-Type": "text/plain",
+        "Content-Length": Buffer.byteLength(content).toString()
+    }, content);
+}
+
+/**
+ * A helper for returning a 401 Unauthorized response.
+ */
+function unauthorized(env, callback, realm) {
+    realm = realm || "Authorization Required";
+
+    var content = "Unauthorized";
+
+    callback(401, {
+        "Content-Type": "text/plain",
+        "Content-Length": Buffer.byteLength(content).toString(),
+        "WWW-Authenticate": 'Basic realm="' + realm + '"'
+    }, content);
+}
+
+/**
+ * A helper for returning a 404 Not Found response.
  */
 function notFound(env, callback) {
     var content = "Not found: " + env.pathInfo;
