@@ -7,22 +7,10 @@ var assert = require("assert"),
 vows.describe("auth/basic").addBatch({
     "An authBasic middleware": {
         "when no validation function is given": {
-            topic: function () {
-                var user = "michael";
-                var pass = "s3krit";
-                var credentials = new Buffer(user + ":" + pass).toString("base64");
-
-                var app = authBasic(utils.empty);
-
-                mock.request({
-                    headers: {
-                        "Authorization": "Basic " + credentials
-                    }
-                }, app, this.callback);
-            },
-            "should return 401": function (err, status, headers, body) {
-                assert.equal(status, 401);
-                assert.ok(headers["WWW-Authenticate"]);
+            "should throw": function () {
+                assert.throws(function () {
+                    var app = authBasic(utils.empty);
+                }, /validation function/);
             }
         },
         "when authorization fails": {
@@ -50,7 +38,6 @@ vows.describe("auth/basic").addBatch({
             topic: function () {
                 var user = "michael";
                 var pass = "s3krit";
-
                 var credentials = new Buffer(user + ":" + pass).toString("base64");
 
                 var app = authBasic(function (env, callback) {
@@ -70,6 +57,9 @@ vows.describe("auth/basic").addBatch({
             },
             "should pass the request downstream": function (err, status, headers, body) {
                 assert.equal(status, 200);
+            },
+            "should set the remoteUser environment variable": function (err, status, headers, body) {
+                assert.ok(headers["X-RemoteUser"]);
                 assert.equal(headers["X-RemoteUser"], "michael");
             }
         }
