@@ -2,6 +2,8 @@
 
   * Refactored BufferedStream into its own module.
 
+  * Added remoteUser environment variable when using basic auth.
+
 = 0.7.0 / 2011-10-30
 
   * Provide as much information as possible in the default error handler for
